adjusting API settings

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,8 +7,10 @@
     </head>
     <body>
 
-      
-
+        <!-- Add Users -->
+        <div class="users-column add-user-col">
+       
+        </div>
 
     </body>
   
